--- a/index.html
+++ b/index.html
@@ -123,96 +123,6 @@
                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                     </a>
                     </div><div class="magnific-img">
-                      <a class="image-popup-vertical-fit" href="al.webp">
-                      <img src="al.webp" alt="9.jpg" />
-                      <i class="fa fa-search-plus" aria-hidden="true"></i>
-                      </a>
-                      </div><div class="magnific-img">
-                        <a class="image-popup-vertical-fit" href="al.webp">
-                        <img src="al.webp" alt="9.jpg" />
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                        </a>
-                        </div><div class="magnific-img">
-                          <a class="image-popup-vertical-fit" href="al.webp">
-                          <img src="al.webp" alt="9.jpg" />
-                          <i class="fa fa-search-plus" aria-hidden="true"></i>
-                          </a>
-                          </div><div class="magnific-img">
-                            <a class="image-popup-vertical-fit" href="al.webp">
-                            <img src="al.webp" alt="9.jpg" />
-                            <i class="fa fa-search-plus" aria-hidden="true"></i>
-                            </a>
-                            </div><div class="magnific-img">
-                              <a class="image-popup-vertical-fit" href="al.webp">
-                              <img src="al.webp" alt="9.jpg" />
-                              <i class="fa fa-search-plus" aria-hidden="true"></i>
-                              </a>
-                              </div><div class="magnific-img">
-                                <a class="image-popup-vertical-fit" href="al.webp">
-                                <img src="al.webp" alt="9.jpg" />
-                                <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                </a>
-                                </div><div class="magnific-img">
-                                  <a class="image-popup-vertical-fit" href="al.webp">
-                                  <img src="al.webp" alt="9.jpg" />
-                                  <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                  </a>
-                                  </div><div class="magnific-img">
-                                    <a class="image-popup-vertical-fit" href="al.webp">
-                                    <img src="al.webp" alt="9.jpg" />
-                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                    </a>
-                                    </div><div class="magnific-img">
-                                      <a class="image-popup-vertical-fit" href="al.webp">
-                                      <img src="al.webp" alt="9.jpg" />
-                                      <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                      </a>
-                                      </div><div class="magnific-img">
-                                        <a class="image-popup-vertical-fit" href="al.webp">
-                                        <img src="al.webp" alt="9.jpg" />
-                                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                        </a>
-                                        </div><div class="magnific-img">
-                                          <a class="image-popup-vertical-fit" href="al.webp">
-                                          <img src="al.webp" alt="9.jpg" />
-                                          <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                          </a>
-                                          </div><div class="magnific-img">
-                                            <a class="image-popup-vertical-fit" href="al.webp">
-                                            <img src="al.webp" alt="9.jpg" />
-                                            <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                            </a>
-                                            </div><div class="magnific-img">
-                                              <a class="image-popup-vertical-fit" href="al.webp">
-                                              <img src="al.webp" alt="9.jpg" />
-                                              <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                              </a>
-                                              </div><div class="magnific-img">
-                                                <a class="image-popup-vertical-fit" href="al.webp">
-                                                <img src="al.webp" alt="9.jpg" />
-                                                <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                                </a>
-                                                </div><div class="magnific-img">
-                                                  <a class="image-popup-vertical-fit" href="al.webp">
-                                                  <img src="al.webp" alt="9.jpg" />
-                                                  <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                                  </a>
-                                                  </div><div class="magnific-img">
-                                                    <a class="image-popup-vertical-fit" href="al.webp">
-                                                    <img src="al.webp" alt="9.jpg" />
-                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                                    </a>
-                                                    </div><div class="magnific-img">
-                                                      <a class="image-popup-vertical-fit" href="al.webp">
-                                                      <img src="al.webp" alt="9.jpg" />
-                                                      <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                                      </a>
-                                                      </div><div class="magnific-img">
-                                                        <a class="image-popup-vertical-fit" href="al.webp">
-                                                        <img src="al.webp" alt="9.jpg" />
-                                                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                                        </a>
-                                                        </div><div class="magnific-img">
                                                           <a class="image-popup-vertical-fit" href="al.webp">
                                                           <img src="al.webp" alt="9.jpg" />
                                                           <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -498,146 +408,7 @@
                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                     </a>
                     </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-    <a class="image-popup-vertical-fit" href="al.webp">
-    <img src="al.webp" alt="9.jpg" />
-    <i class="fa fa-search-plus" aria-hidden="true"></i>
-    </a>
-    </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-    <a class="image-popup-vertical-fit" href="al.webp">
-    <img src="al.webp" alt="9.jpg" />
-    <i class="fa fa-search-plus" aria-hidden="true"></i>
-    </a>
-    </div><div class="magnific-img">
-      <a class="image-popup-vertical-fit" href="al.webp">
-      <img src="al.webp" alt="9.jpg" />
-      <i class="fa fa-search-plus" aria-hidden="true"></i>
-      </a>
-      </div><div class="magnific-img">
-        <a class="image-popup-vertical-fit" href="al.webp">
-        <img src="al.webp" alt="9.jpg" />
-        <i class="fa fa-search-plus" aria-hidden="true"></i>
-        </a>
-        </div><div class="magnific-img">
-          <a class="image-popup-vertical-fit" href="al.webp">
-          <img src="al.webp" alt="9.jpg" />
-          <i class="fa fa-search-plus" aria-hidden="true"></i>
-          </a>
-          </div><div class="magnific-img">
-            <a class="image-popup-vertical-fit" href="al.webp">
-            <img src="al.webp" alt="9.jpg" />
-            <i class="fa fa-search-plus" aria-hidden="true"></i>
-            </a>
-            </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-    <a class="image-popup-vertical-fit" href="al.webp">
-    <img src="al.webp" alt="9.jpg" />
-    <i class="fa fa-search-plus" aria-hidden="true"></i>
-    </a>
-    </div><div class="magnific-img">
-      <a class="image-popup-vertical-fit" href="al.webp">
-      <img src="al.webp" alt="9.jpg" />
-      <i class="fa fa-search-plus" aria-hidden="true"></i>
-      </a>
-      </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-    <a class="image-popup-vertical-fit" href="al.webp">
-    <img src="al.webp" alt="9.jpg" />
-    <i class="fa fa-search-plus" aria-hidden="true"></i>
-    </a>
-    </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-    <a class="image-popup-vertical-fit" href="al.webp">
-    <img src="al.webp" alt="9.jpg" />
-    <i class="fa fa-search-plus" aria-hidden="true"></i>
-    </a>
-    </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-    <a class="image-popup-vertical-fit" href="al.webp">
-    <img src="al.webp" alt="9.jpg" />
-    <i class="fa fa-search-plus" aria-hidden="true"></i>
-    </a>
-    </div><div class="magnific-img">
-  <a class="image-popup-vertical-fit" href="al.webp">
-  <img src="al.webp" alt="9.jpg" />
-  <i class="fa fa-search-plus" aria-hidden="true"></i>
-  </a>
-  </div><div class="magnific-img">
-    <a class="image-popup-vertical-fit" href="al.webp">
-    <img src="al.webp" alt="9.jpg" />
-    <i class="fa fa-search-plus" aria-hidden="true"></i>
-    </a>
-    </div><div class="magnific-img">
-      <a class="image-popup-vertical-fit" href="al.webp">
-      <img src="al.webp" alt="9.jpg" />
-      <i class="fa fa-search-plus" aria-hidden="true"></i>
-      </a>
-      </div><div class="magnific-img">
-        <a class="image-popup-vertical-fit" href="al.webp">
-        <img src="al.webp" alt="9.jpg" />
-        <i class="fa fa-search-plus" aria-hidden="true"></i>
-        </a>
-        </div><div class="magnific-img">
-          <a class="image-popup-vertical-fit" href="al.webp">
-          <img src="al.webp" alt="9.jpg" />
-          <i class="fa fa-search-plus" aria-hidden="true"></i>
-          </a>
-          </div><div class="magnific-img">
-            <a class="image-popup-vertical-fit" href="al.webp">
-            <img src="al.webp" alt="9.jpg" />
-            <i class="fa fa-search-plus" aria-hidden="true"></i>
-            </a>
-            </div><div class="magnific-img">
-              <a class="image-popup-vertical-fit" href="al.webp">
-              <img src="al.webp" alt="9.jpg" />
-              <i class="fa fa-search-plus" aria-hidden="true"></i>
-              </a>
-              </div><div class="magnific-img">
-                <a class="image-popup-vertical-fit" href="al.webp">
-                <img src="al.webp" alt="9.jpg" />
-                <i class="fa fa-search-plus" aria-hidden="true"></i>
-                </a>
-                </div><div class="magnific-img">
+  <div class="magnific-img">
                   <a class="image-popup-vertical-fit" href="al.webp">
                   <img src="al.webp" alt="9.jpg" />
                   <i class="fa fa-search-plus" aria-hidden="true"></i>
