--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/jquery-ui.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="cpstyle.css">
   </head>
@@ -118,6 +123,96 @@
                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                     </a>
                     </div><div class="magnific-img">
+                      <a class="image-popup-vertical-fit" href="al.webp">
+                      <img src="al.webp" alt="9.jpg" />
+                      <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </a>
+                      </div><div class="magnific-img">
+                        <a class="image-popup-vertical-fit" href="al.webp">
+                        <img src="al.webp" alt="9.jpg" />
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                        </a>
+                        </div><div class="magnific-img">
+                          <a class="image-popup-vertical-fit" href="al.webp">
+                          <img src="al.webp" alt="9.jpg" />
+                          <i class="fa fa-search-plus" aria-hidden="true"></i>
+                          </a>
+                          </div><div class="magnific-img">
+                            <a class="image-popup-vertical-fit" href="al.webp">
+                            <img src="al.webp" alt="9.jpg" />
+                            <i class="fa fa-search-plus" aria-hidden="true"></i>
+                            </a>
+                            </div><div class="magnific-img">
+                              <a class="image-popup-vertical-fit" href="al.webp">
+                              <img src="al.webp" alt="9.jpg" />
+                              <i class="fa fa-search-plus" aria-hidden="true"></i>
+                              </a>
+                              </div><div class="magnific-img">
+                                <a class="image-popup-vertical-fit" href="al.webp">
+                                <img src="al.webp" alt="9.jpg" />
+                                <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                </a>
+                                </div><div class="magnific-img">
+                                  <a class="image-popup-vertical-fit" href="al.webp">
+                                  <img src="al.webp" alt="9.jpg" />
+                                  <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                  </a>
+                                  </div><div class="magnific-img">
+                                    <a class="image-popup-vertical-fit" href="al.webp">
+                                    <img src="al.webp" alt="9.jpg" />
+                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                    </a>
+                                    </div><div class="magnific-img">
+                                      <a class="image-popup-vertical-fit" href="al.webp">
+                                      <img src="al.webp" alt="9.jpg" />
+                                      <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                      </a>
+                                      </div><div class="magnific-img">
+                                        <a class="image-popup-vertical-fit" href="al.webp">
+                                        <img src="al.webp" alt="9.jpg" />
+                                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                        </a>
+                                        </div><div class="magnific-img">
+                                          <a class="image-popup-vertical-fit" href="al.webp">
+                                          <img src="al.webp" alt="9.jpg" />
+                                          <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                          </a>
+                                          </div><div class="magnific-img">
+                                            <a class="image-popup-vertical-fit" href="al.webp">
+                                            <img src="al.webp" alt="9.jpg" />
+                                            <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                            </a>
+                                            </div><div class="magnific-img">
+                                              <a class="image-popup-vertical-fit" href="al.webp">
+                                              <img src="al.webp" alt="9.jpg" />
+                                              <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                              </a>
+                                              </div><div class="magnific-img">
+                                                <a class="image-popup-vertical-fit" href="al.webp">
+                                                <img src="al.webp" alt="9.jpg" />
+                                                <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                </a>
+                                                </div><div class="magnific-img">
+                                                  <a class="image-popup-vertical-fit" href="al.webp">
+                                                  <img src="al.webp" alt="9.jpg" />
+                                                  <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                  </a>
+                                                  </div><div class="magnific-img">
+                                                    <a class="image-popup-vertical-fit" href="al.webp">
+                                                    <img src="al.webp" alt="9.jpg" />
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                    </a>
+                                                    </div><div class="magnific-img">
+                                                      <a class="image-popup-vertical-fit" href="al.webp">
+                                                      <img src="al.webp" alt="9.jpg" />
+                                                      <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                      </a>
+                                                      </div><div class="magnific-img">
+                                                        <a class="image-popup-vertical-fit" href="al.webp">
+                                                        <img src="al.webp" alt="9.jpg" />
+                                                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                                                        </a>
+                                                        </div><div class="magnific-img">
                                                           <a class="image-popup-vertical-fit" href="al.webp">
                                                           <img src="al.webp" alt="9.jpg" />
                                                           <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -403,7 +498,146 @@
                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                     </a>
                     </div><div class="magnific-img">
-  <div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+    <a class="image-popup-vertical-fit" href="al.webp">
+    <img src="al.webp" alt="9.jpg" />
+    <i class="fa fa-search-plus" aria-hidden="true"></i>
+    </a>
+    </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+    <a class="image-popup-vertical-fit" href="al.webp">
+    <img src="al.webp" alt="9.jpg" />
+    <i class="fa fa-search-plus" aria-hidden="true"></i>
+    </a>
+    </div><div class="magnific-img">
+      <a class="image-popup-vertical-fit" href="al.webp">
+      <img src="al.webp" alt="9.jpg" />
+      <i class="fa fa-search-plus" aria-hidden="true"></i>
+      </a>
+      </div><div class="magnific-img">
+        <a class="image-popup-vertical-fit" href="al.webp">
+        <img src="al.webp" alt="9.jpg" />
+        <i class="fa fa-search-plus" aria-hidden="true"></i>
+        </a>
+        </div><div class="magnific-img">
+          <a class="image-popup-vertical-fit" href="al.webp">
+          <img src="al.webp" alt="9.jpg" />
+          <i class="fa fa-search-plus" aria-hidden="true"></i>
+          </a>
+          </div><div class="magnific-img">
+            <a class="image-popup-vertical-fit" href="al.webp">
+            <img src="al.webp" alt="9.jpg" />
+            <i class="fa fa-search-plus" aria-hidden="true"></i>
+            </a>
+            </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+    <a class="image-popup-vertical-fit" href="al.webp">
+    <img src="al.webp" alt="9.jpg" />
+    <i class="fa fa-search-plus" aria-hidden="true"></i>
+    </a>
+    </div><div class="magnific-img">
+      <a class="image-popup-vertical-fit" href="al.webp">
+      <img src="al.webp" alt="9.jpg" />
+      <i class="fa fa-search-plus" aria-hidden="true"></i>
+      </a>
+      </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+    <a class="image-popup-vertical-fit" href="al.webp">
+    <img src="al.webp" alt="9.jpg" />
+    <i class="fa fa-search-plus" aria-hidden="true"></i>
+    </a>
+    </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+    <a class="image-popup-vertical-fit" href="al.webp">
+    <img src="al.webp" alt="9.jpg" />
+    <i class="fa fa-search-plus" aria-hidden="true"></i>
+    </a>
+    </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+    <a class="image-popup-vertical-fit" href="al.webp">
+    <img src="al.webp" alt="9.jpg" />
+    <i class="fa fa-search-plus" aria-hidden="true"></i>
+    </a>
+    </div><div class="magnific-img">
+  <a class="image-popup-vertical-fit" href="al.webp">
+  <img src="al.webp" alt="9.jpg" />
+  <i class="fa fa-search-plus" aria-hidden="true"></i>
+  </a>
+  </div><div class="magnific-img">
+    <a class="image-popup-vertical-fit" href="al.webp">
+    <img src="al.webp" alt="9.jpg" />
+    <i class="fa fa-search-plus" aria-hidden="true"></i>
+    </a>
+    </div><div class="magnific-img">
+      <a class="image-popup-vertical-fit" href="al.webp">
+      <img src="al.webp" alt="9.jpg" />
+      <i class="fa fa-search-plus" aria-hidden="true"></i>
+      </a>
+      </div><div class="magnific-img">
+        <a class="image-popup-vertical-fit" href="al.webp">
+        <img src="al.webp" alt="9.jpg" />
+        <i class="fa fa-search-plus" aria-hidden="true"></i>
+        </a>
+        </div><div class="magnific-img">
+          <a class="image-popup-vertical-fit" href="al.webp">
+          <img src="al.webp" alt="9.jpg" />
+          <i class="fa fa-search-plus" aria-hidden="true"></i>
+          </a>
+          </div><div class="magnific-img">
+            <a class="image-popup-vertical-fit" href="al.webp">
+            <img src="al.webp" alt="9.jpg" />
+            <i class="fa fa-search-plus" aria-hidden="true"></i>
+            </a>
+            </div><div class="magnific-img">
+              <a class="image-popup-vertical-fit" href="al.webp">
+              <img src="al.webp" alt="9.jpg" />
+              <i class="fa fa-search-plus" aria-hidden="true"></i>
+              </a>
+              </div><div class="magnific-img">
+                <a class="image-popup-vertical-fit" href="al.webp">
+                <img src="al.webp" alt="9.jpg" />
+                <i class="fa fa-search-plus" aria-hidden="true"></i>
+                </a>
+                </div><div class="magnific-img">
                   <a class="image-popup-vertical-fit" href="al.webp">
                   <img src="al.webp" alt="9.jpg" />
                   <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -454,7 +688,17 @@
   //# sourceURL=pen.js
       </script>
         <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/jquery-migrate-3.0.1.min.js"></script>
+        <script src="js/jquery-ui.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.stellar.min.js"></script>
+        <script src="js/jquery.countdown.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/bootstrap-datepicker.min.js"></script>
         <script src="aos.js"></script>
+      
         <script src="main.js"></script>  
 </body>
 </head>
